plang/testing/logs/false-incorrect/95/program95.p.p
cpZD (m6Kw ovfSK bSwNu (Q) (pH)) :- (oWX xavOE vQl46 GdJ (JCQ5)); hiRqI Ww (E).

nF yGyKh (zOuC (aN (ijb))).


iq JQ (t82G HXiK (vl (bV TK (AR) (xUC oa97m) z9) f) (rY9 (g (UvZ) Fbe7s) (kB (AY1A) (d (FA7Re)) (bD) (ahf Jns Hhpgz)) G y) (h (TSMD))) (qL (TWn) (O6)) (mn qRBG) :- (af7Ka (Bknxg) u f qt95F; (fei YP3TO, fit A Xxsr (yL (sN (pDfr) (Hs6) (F8Xq)) Udebj h73S)), bxn (Yj7) N (AKJ7) (LNsI); i apri3).

fIi3 (cfGF RHW6z W) Bq (Qy8Wi) (uZ5e Agas) :- (i2 fWdSH V35n (IZ)), cL71 (RL) Nj (T) ubo9A.


ywaKA pmIHF.

jUw (ovP z) wcZ4q qdP9 (ur KUwR5 (Wsz) (xKQ yP)) :- (mun uM Xh6s (P) (G6H3l); oI (vSWzE (Pz) (fLh (ML) (IjZo) Muh) q6u) (Pmpc5) a (SD9); a (Cw) w3T wJ sxuXb; pX (ffOcB) x PlC32 (r1 ypUj (fIhMV Ut1ts (iv9zz)) x8), yX, q6DM (yTuZ), (vh (Gm) (SC60F); dI (VYXN) uprU (bC (N5r3) lFvK) (tJQ51 (cs0z (zKtK (AUl) (w ABb9 zPJ0 A0 (U)) U (Y))) (u8H)); (m2 OLgbl AZNF GWL))).
g U T Lz (EnThK).
w9r9 DKfGy AE3 (eXHS kdM8 U (k b S) LSebh).
j znWuY :- ((hc53F (sp) (R) o ie8); kGQcr kbS0 FTVF; sl fvG P jnf6; zVwXC h if g (e8Lzz (a Vopa)), qiaU7 (vBSdN (ew GhB Aioz) (R) k I5Ox)).

gKs (W0b2I) gLFX4 (N1Lt) :- a; cC0y (Hxk) XJh RItYg; tH mmy T s9, qqD iS, heJYM EHI (rB gq), h3, (nIb (gj4W5 (ohl)) (K8) JTT4), sTMy2 (ftnT (AmN) (sw725 (VS) (X0l)) (Iqz) (q3 (k yl))) (Mgfbt), eAg, ehpeS (E) (T4BPH), ovp9 (R) (Lj8G1) (W0ZI), yldSE; iSKnU rnE (qSaJg (fb (c) AhY (dx (XJiuS)))) N; uK9fk; hRTR yX (ZgCy).
? (((u8WW (vejlS (b2ptk) (U) (qOYi (hn CJF) (fGxvy) r3dMp (EJKM5))) p (j5Uc (p W (CLkF) (f QQuP (jq xCWJ P)) Bpkhz) AQ r) (lR1 (k) ycvD (b44)), b2ix qrY (Y)), k gK (B))).
